2006-08-13  Neil Williams <linux@codehelp.co.uk>

	* configure.in : Enable -Wextra under
	--enable-compiler-warnings.

	Implement -Wextra. File list:
	* backend/file/qsf-backend.c :
	* backend/file/qsf-xml-map.c :
	* backend/file/qsf-xml.c :
	* backend/file/qsf-xml.h :
	* debian/changelog :
	* qof/deprecated.c :
	* qof/kvp-util.c :
	* qof/kvp_frame.c :
	* qof/qofbook.c :
	* qof/qofbookmerge.c :
	* qof/qofclass.c :
	* qof/qofdate.c :
	* qof/qofgobj.c :
	* qof/qofid.c :
	* qof/qoflog.c :
	* qof/qoflog.h :
	* qof/qofmath128.c :
	* qof/qofobject.c :
	* qof/qofquery.c :
	* qof/qofquerycore.c :
	* qof/qofsession.c :
	* qof/qofsql.c :
	* qof/test/test-book-merge.c :
	* qof/test/test-date.c :
	* qof/test/test-event.c :
	* qof/test/test-guid.c :
	* qof/test/test-numeric.c :
	* qof/test/test-object.c :
	* qof/test/test-querynew.c :
	* qof/test/test-recursive.c :

2006-07-26  Neil Williams <linux@codehelp.co.uk>

	* po/vi.po : Updated Vietnamese translation by
	Clytie Siddall.
	* po/ro.po : New Romanian translation by
	Laurentiu Buzdugan.

2006-07-24  Neil Williams <linux@codehelp.co.uk>

	* qof/qofquerycore.c : Fix --disable-deprecated-qof
	build.
	* website/hacking.html :
	* NEWS : 
	* HACKING : Prepare for 0.7.0 release.

2006-07-23  Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c : Fix qof_date_from_struct_tm 
	and qof_date_to_struct_tm. Remove duplicate debug 
	log command.
	* qof/qof/qofstrptime.c,
	qof/qof/qofdate-p.h :
	ERR_RECURSIVE_F is not an error, remove.
	* qof/qofquery.c : Prevent typos by using the qofutil
	enum to string macro.
	
	* qof/deprecated.c : Tidy up, remove old comments.
	* qof/deprecated.h : Clarifying change from query_date_t
	to query_time_t.
	* qof/qofbookmerge.c : Fix known_types handling for
	QofTime merge. Fix QofTime get and set routines.
	* qof/qofdate.c : Move to revised prototype of
	qof_time_add_secs.
	* qof/qofquery.c : debug tweak.
	* qof/qofquery.h : Doxygen tweaks.
	* qof/qofquerycore-p.h : Move from query_date_t to