@@ -1669,7 +1669,7 @@ run_qoftime_test (void)
 }
 
 int
-main (int argc __attribute__ ((unused)), char **argv __attribute__ ((unused)))
+main (void)
 {
 	qof_init ();
 #ifdef TEST_DEBUG
