@@ -888,7 +888,7 @@ run_test (void)
 }
 
 int
-main (int argc __attribute__ ((unused)), char **argv __attribute__ ((unused)))
+main (void)
 {
 	qof_init ();
 	run_test ();
