@@ -37,17 +37,17 @@ static void test_printable (const char *name, gpointer obj);
 static void test_foreach (QofBook *, const char *);
 
 static QofObject bus_obj = {
-  interface_version:QOF_OBJECT_VERSION,
-  e_type:TEST_MODULE_NAME,
-  type_label:TEST_MODULE_DESC,
-  create:NULL,
-  book_begin:NULL,
-  book_end:NULL,
-  is_dirty:NULL,
-  mark_clean:NULL,
-  foreach:obj_foreach,
-  printable:printable,
-  version_cmp:NULL,
+  .interface_version = QOF_OBJECT_VERSION,
+  .e_type = TEST_MODULE_NAME,
+  .type_label = TEST_MODULE_DESC,
+  .create = NULL,
+  .book_begin = NULL,
+  .book_end = NULL,
+  .is_dirty = NULL,
+  .mark_clean = NULL,
+  .foreach = obj_foreach,
+  .printable = printable,
+  .version_cmp = NULL,
 };
 
 static void
@@ -148,7 +148,7 @@ test_printable (const char *name, gpointer obj)
 }
 
 int
-main (int argc __attribute__ ((unused)), char **argv __attribute__ ((unused)))
+main (void)
 {
 	qof_init ();
 	test_object ();
